// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stats should render with state 1`] = `
<ng-ais-stats
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  template="undefined"
  updateState={[Function Function]}
>
  
      <div
    class="ais-Stats"
  >
    
        
    <ng-ais-header
      classname="ais-Stats-header ais-header"
      ng-reflect-class-name="ais-Stats-header ais-header"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    
    
  
        
    
    <div
      class="ais-Stats-body ais-body"
    >
      
          100 results found in 123ms.
        
    </div>
    
  
        
    <ng-ais-footer
      ais-footer=""
      classname="ais-Stats-footer"
      ng-reflect-class-name="ais-Stats-footer"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-stats>
`;

exports[`Stats should render without state 1`] = `
<ng-ais-stats
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  template="undefined"
  updateState={[Function Function]}
>
  
      <div
    class="ais-Stats"
  >
    
        
    <ng-ais-header
      classname="ais-Stats-header ais-header"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    
    
  
        
    
    
  
        
    <ng-ais-footer
      ais-footer=""
      classname="ais-Stats-footer"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-stats>
`;
